@@ -1320,6 +1320,7 @@ Hisao Suzuki
 Kalle Svensson
 Andrew Svetlov
 Paul Swartz
+Al Sweigart
 Thenault Sylvain
 Péter Szabó
 John Szakmeister
